[package]
name = "backdown"
version = "0.2.0"
authors = ["Canop <cano.petrole@gmail.com>"]
edition = "2018"
description = "nothing yet"
repository = "https://github.com/Canop/backdown"
license = "MIT"
readme = "README.md"


[dependencies]
argh = "0.1.4"
anyhow = "1.0"
crossbeam = "0.7"
crossterm = "0.20.0"
file-size = "1.0"
fnv = "1.0.7"
lazy-regex = "2.2"
minimad = "0.8.0"
phf = { version = "0.8", features = ["macros"] }
rayon = "1.3"
sha2 = "0.9"
termimad = "0.14.0"

[patch.crates-io]
#minimad = { path = "../minimad" }
#termimad = { path = "../termimad" }
