[package]
name = "backdown"
version = "1.0.1"
authors = ["Canop <cano.petrole@gmail.com>"]
edition = "2018"
description = "A smart CLI for removing thousands of duplicates on your disks"
repository = "https://github.com/Canop/backdown"
license = "MIT"
readme = "README.md"


[dependencies]
argh = "0.1.4"
anyhow = "1.0"
blake3 = "0.3"
cli-log = "2.0"
crossbeam = "0.7"
crossterm = "0.21.0"
file-size = "1.0"
fnv = "1.0.7"
lazy-regex = "2.2.2"
phf = { version = "0.8", features = ["macros"] }
rayon = "1.3"
termimad = "0.19"

[patch.crates-io]
#minimad = { path = "../minimad" }
#termimad = { path = "../termimad" }
