[package]
name = "backdown"
version = "1.1.1"
authors = ["Canop <cano.petrole@gmail.com>"]
edition = "2021"
rust-version = "1.59"
description = "A smart CLI for removing thousands of duplicates on your disks"
repository = "https://github.com/Canop/backdown"
license = "MIT"
readme = "README.md"

[dependencies]
argh = "0.1.4"
anyhow = "1.0.49"
blake3 = "1.4"
chrono = "0.4"
cli-log = "2.0"
crossbeam = "0.8"
file-size = "1.0"
fnv = "1.0.7"
lazy-regex = "3.3"
phf = { version = "0.11", features = ["macros"] }
rayon = "1.3"
serde ="1.0"
serde_json = "1.0"
termimad = "0.30"

[profile.release]
strip = true

[patch.crates-io]
#minimad = { path = "../minimad" }
#termimad = { path = "../termimad" }
